[package]
name = "weather_forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version="0.11.14", features=["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
